plugins {
    id 'org.springframework.boot' version '2.1.4.RELEASE'
    id 'java'
    id "org.asciidoctor.convert" version "1.5.3"
    id 'com.bmuschko.docker-spring-boot-application' version '4.10.0'
}

apply plugin: 'io.spring.dependency-management'

group = 'com.kyriba'
version = '0.0.1'
sourceCompatibility = '11'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenLocal()
    mavenCentral()
}

ext {
    snippets = file('build/generated-snippets')
}

test {
    outputs.dir snippets
    useJUnitPlatform()
}

asciidoctor {
    inputs.dir snippets
    dependsOn test
}

bootJar {
    dependsOn asciidoctor
    from ("${asciidoctor.outputDir}/html5") {
        into 'static/docs'
    }
}

docker {
    registryCredentials {
        url = 'https://index.docker.io/v1/'
        username = 'dbelykyriba'
        password = 'Bxga8Kdz!C7d462P^XKr$1'
        email = 'dbelykyriba@outlook.com'
    }

    springBootApplication {
        baseImage = 'openjdk:11'
        ports = [8080]
        tag = "dbelykyriba/curriculum-service:$version"
    }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    implementation 'io.springfox:springfox-swagger2:2.9.2'
    implementation 'io.springfox:springfox-swagger-ui:2.9.2'
    implementation 'io.springfox:springfox-bean-validators:2.9.2'
    implementation 'org.hibernate.validator:hibernate-validator'

    implementation 'ch.qos.logback:logback-classic:1.2.3'
    //implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:2.1.1.RELEASE'
    
    compileOnly 'org.projectlombok:lombok'
    //runtimeOnly 'com.h2database:h2'
    runtimeOnly 'org.postgresql:postgresql:42.2.5'
    annotationProcessor 'org.projectlombok:lombok'
    
    testImplementation ('org.springframework.boot:spring-boot-starter-test') {
        exclude group: 'junit'
    }
    testImplementation "org.junit.jupiter:junit-jupiter-api:5.4.2"
    testImplementation "org.junit.vintage:junit-vintage-engine:5.4.2"
    testImplementation "org.junit.jupiter:junit-jupiter-engine:5.4.2"
    testImplementation "org.junit.jupiter:junit-jupiter-params:5.4.2"
    testImplementation "org.junit.platform:junit-platform-commons:1.4.0"
    testImplementation "org.junit.platform:junit-platform-launcher:1.4.0"

    testImplementation "org.mockito:mockito-core:2.28.2"
    testImplementation "org.mockito:mockito-junit-jupiter:2.28.2"
    testImplementation  "io.rest-assured:spring-mock-mvc:3.3.0"
    testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc:2.0.3.RELEASE'

    
    testImplementation ('org.springframework.restdocs:spring-restdocs-restassured') {
        exclude group: 'junit'
    }
    testImplementation ('org.springframework.restdocs:spring-restdocs-asciidoctor') {
        exclude group: 'junit'
    }
}
